force-app/main/default/objects/HiringEventItem__c/HiringEventItem__c.object-meta.xml
<CustomObject>
    <label>Hiring Event Item</label>
    <nameField>
        <label>HiringEventItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HiringEventItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>