force-app/main/default/objects/HiringEventItem__c/fields/CandidateId__c.field-meta.xml
<CustomField>
    <fullName>CandidateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>HiringEventItems</relationshipLabel>
    <relationshipName>HiringEventItems</relationshipName>
    <type>Lookup</type>
</CustomField>