force-app/main/default/objects/HiringEventItem__c/fields/CandidateName__c.field-meta.xml
<CustomField>
    <fullName>CandidateName__c</fullName>
    <formula>CandidateId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>