force-app/main/default/objects/HiringEventItem__c/fields/CandidateStatus__c.field-meta.xml
<CustomField>
    <fullName>CandidateStatus__c</fullName>
    <formula>TEXT( CandidateId__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Status</label>
    <type>Text</type>
</CustomField>