force-app/main/default/objects/HiringEventItem__c/fields/CodepairLink__c.field-meta.xml
<CustomField>
    <fullName>CodepairLink__c</fullName>
    <label>Codepair Link</label>
    <type>Url</type>
</CustomField>