force-app/main/default/objects/HiringEventItem__c/fields/HiringEvent__c.field-meta.xml
<CustomField>
    <fullName>HiringEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Event</label>
    <referenceTo>Hiring_Event__c</referenceTo>
    <relationshipLabel>HiringEventItems</relationshipLabel>
    <relationshipName>HiringEventItems</relationshipName>
    <type>Lookup</type>
</CustomField>