force-app/main/default/objects/HiringEventItem__c/fields/HiringEventId__c.field-meta.xml
<CustomField>
    <fullName>HiringEventId__c</fullName>
    <formula>CandidateId__r.HiringEventId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiring Event Id</label>
    <type>Text</type>
</CustomField>