force-app/main/default/objects/HiringEventItem__c/fields/InterviewLink__c.field-meta.xml
<CustomField>
    <fullName>InterviewLink__c</fullName>
    <label>Interview Link</label>
    <type>Url</type>
</CustomField>