force-app/main/default/objects/HiringEventItem__c/fields/R1Feedback__c.field-meta.xml
<CustomField>
    <fullName>R1Feedback__c</fullName>
    <formula>R1Round__r.Feedback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R1 Feedback</label>
    <type>Text</type>
</CustomField>