force-app/main/default/objects/HiringEventItem__c/fields/R1Interviewer__c.field-meta.xml
<CustomField>
    <fullName>R1Interviewer__c</fullName>
    <formula>R1Round__r.Interviewer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R1 Interviewer</label>
    <type>Text</type>
</CustomField>