force-app/main/default/objects/HiringEventItem__c/fields/R1InterviewerEmail__c.field-meta.xml
<CustomField>
    <fullName>R1InterviewerEmail__c</fullName>
    <formula>R1Round__r.Interviewer__r.InterviewerEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R1 Interviewer Email</label>
    <type>Text</type>
</CustomField>