force-app/main/default/objects/HiringEventItem__c/fields/R1Observer__c.field-meta.xml
<CustomField>
    <fullName>R1Observer__c</fullName>
    <formula>R1Round__r.Observer__c</formula>
    <label>R1 Observer</label>
    <type>Text</type>
</CustomField>