force-app/main/default/objects/HiringEventItem__c/fields/R1ProxyInterviewer__c.field-meta.xml
<CustomField>
    <fullName>R1ProxyInterviewer__c</fullName>
    <formula>R1Round__r.ProxyInterviewer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R1 Proxy Interviewer</label>
    <type>Text</type>
</CustomField>