force-app/main/default/objects/HiringEventItem__c/fields/R1Round__c.field-meta.xml
<CustomField>
    <fullName>R1Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R1 Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>HiringEventItems</relationshipLabel>
    <relationshipName>HiringEventItems</relationshipName>
    <type>Lookup</type>
</CustomField>