force-app/main/default/objects/HiringEventItem__c/fields/R1RoundStatus__c.field-meta.xml
<CustomField>
    <fullName>R1RoundStatus__c</fullName>
    <formula>TEXT( R1Round__r.RoundStatus__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R1 Round Status</label>
    <type>Text</type>
</CustomField>