force-app/main/default/objects/HiringEventItem__c/fields/R1SiftLink__c.field-meta.xml
<CustomField>
    <fullName>R1SiftLink__c</fullName>
    <formula>R1Round__r.SiftLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R1 SIFT Link</label>
    <type>Text</type>
</CustomField>