force-app/main/default/objects/HiringEventItem__c/fields/R1StartTime__c.field-meta.xml
<CustomField>
    <fullName>R1StartTime__c</fullName>
    <label>R1 Start Time</label>
    <type>DateTime</type>
</CustomField>