force-app/main/default/objects/HiringEventItem__c/fields/R2Feedback__c.field-meta.xml
<CustomField>
    <fullName>R2Feedback__c</fullName>
    <label>R2 Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>