force-app/main/default/objects/HiringEventItem__c/fields/R2Interviewer__c.field-meta.xml
<CustomField>
    <fullName>R2Interviewer__c</fullName>
    <formula>R2Round__r.Interviewer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R2 Interviewer</label>
    <type>Text</type>
</CustomField>