force-app/main/default/objects/HiringEventItem__c/fields/R2InterviewerEmail__c.field-meta.xml
<CustomField>
    <fullName>R2InterviewerEmail__c</fullName>
    <formula>R2Round__r.Interviewer__r.InterviewerEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R2 Interviewer Email</label>
    <type>Text</type>
</CustomField>