force-app/main/default/objects/HiringEventItem__c/fields/R2Observer__c.field-meta.xml
<CustomField>
    <fullName>R2Observer__c</fullName>
    <label>R2 Observer</label>
    <type>Email</type>
</CustomField>