force-app/main/default/objects/HiringEventItem__c/fields/R2ProxyInterviewer__c.field-meta.xml
<CustomField>
    <fullName>R2ProxyInterviewer__c</fullName>
    <formula>R2Round__r.ProxyInterviewer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R2 Proxy Interviewer</label>
    <type>Text</type>
</CustomField>