force-app/main/default/objects/HiringEventItem__c/fields/R2Round__c.field-meta.xml
<CustomField>
    <fullName>R2Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R2 Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>HiringEventItems (Round 2)</relationshipLabel>
    <relationshipName>HiringEventItems1</relationshipName>
    <type>Lookup</type>
</CustomField>