force-app/main/default/objects/HiringEventItem__c/fields/R2RoundStatus__c.field-meta.xml
<CustomField>
    <fullName>R2RoundStatus__c</fullName>
    <label>R2 Round Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>