force-app/main/default/objects/HiringEventItem__c/fields/R2SiftLink__c.field-meta.xml
<CustomField>
    <fullName>R2SiftLink__c</fullName>
    <label>R2 SIFT Link</label>
    <type>Url</type>
</CustomField>