force-app/main/default/objects/HiringEventItem__c/fields/R2StartTime__c.field-meta.xml
<CustomField>
    <fullName>R2StartTime__c</fullName>
    <formula>DATETIMEVALUE( R2Round__r.StartTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R2 Start Time</label>
    <type>DateTime</type>
</CustomField>