force-app/main/default/objects/HiringEventItem__c/fields/R3Feedback__c.field-meta.xml
<CustomField>
    <fullName>R3Feedback__c</fullName>
    <formula>R3Round__r.Feedback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R3 Feedback</label>
    <type>Text</type>
</CustomField>