force-app/main/default/objects/HiringEventItem__c/fields/R3Interviewer__c.field-meta.xml
<CustomField>
    <fullName>R3Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R3 Interviewer</label>
    <referenceTo>Interviewer__c</referenceTo>
    <relationshipLabel>HiringEventItems (R3 Interviewer)</relationshipLabel>
    <relationshipName>HiringEventItems2</relationshipName>
    <type>Lookup</type>
</CustomField>