force-app/main/default/objects/HiringEventItem__c/fields/R3InterviewerEmail__c.field-meta.xml
<CustomField>
    <fullName>R3InterviewerEmail__c</fullName>
    <formula>R3Round__r.Interviewer__r.InterviewerEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R3 Interviewer Email</label>
    <type>Text</type>
</CustomField>