force-app/main/default/objects/HiringEventItem__c/fields/R3Observer__c.field-meta.xml
<CustomField>
    <fullName>R3Observer__c</fullName>
    <label>R3 Observer</label>
    <type>Email</type>
</CustomField>