force-app/main/default/objects/HiringEventItem__c/fields/R3ProxyInterviewer__c.field-meta.xml
<CustomField>
    <fullName>R3ProxyInterviewer__c</fullName>
    <formula>R3Round__r.ProxyInterviewer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R3 Proxy Interviewer</label>
    <type>Text</type>
</CustomField>