force-app/main/default/objects/HiringEventItem__c/fields/R3Round__c.field-meta.xml
<CustomField>
    <fullName>R3Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R3 Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>HiringEventItems (R3 Round)</relationshipLabel>
    <relationshipName>HiringEventItems2</relationshipName>
    <type>Lookup</type>
</CustomField>