force-app/main/default/objects/HiringEventItem__c/fields/R3RoundStatus__c.field-meta.xml
<CustomField>
    <fullName>R3RoundStatus__c</fullName>
    <label>R3 Round Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>