force-app/main/default/objects/HiringEventItem__c/fields/R3SiftLink__c.field-meta.xml
<CustomField>
    <fullName>R3SiftLink__c</fullName>
    <label>R3 SIFT Link</label>
    <type>Url</type>
</CustomField>