force-app/main/default/objects/HiringEventItem__c/fields/R3StartTime__c.field-meta.xml
<CustomField>
    <fullName>R3StartTime__c</fullName>
    <formula>DATETIMEVALUE( R3Round__r.StartTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R3 Start Time</label>
    <type>DateTime</type>
</CustomField>