force-app/main/default/objects/HiringEventItem__c/fields/ResumeLink__c.field-meta.xml
<CustomField>
    <fullName>ResumeLink__c</fullName>
    <formula>CandidateId__r.ResumeLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resume Link</label>
    <type>Text</type>
</CustomField>