force-app/main/default/objects/HiringEventItem__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role Evaluation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>