force-app/main/default/objects/HiringEventItem__c/fields/RoleEvaluation__c.field-meta.xml
<CustomField>
    <fullName>RoleEvaluation__c</fullName>
    <formula>TEXT( CandidateId__r.Role__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Evaluation</label>
    <type>Text</type>
</CustomField>